--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17"
+  },
+  "dependencies": {
+    "vite": "^6.3.5"
   }
 }
